--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "laravellegends/pt-br-validator": "^11.0",
         "spatie/laravel-query-builder": "^5.8"
     },
     "require-dev": {
