--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Krk35r2JSBv+CLa0lCN7+WHoNb1T+k4I57nVvGeYc5c=
+APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=America/Sao_Paulo
+APP_URL=http://api-mediaw.test
 
-APP_LOCALE=en
+AUTH_GUARD=web
+
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
@@ -62,3 +64,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+JWT_SECRET=
