fix: refatorado os endpois para dentro da arquitetura isolando sua implementação

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_TIMEZONE=America/Sao_Paulo
 APP_URL=http://api-mediaw.test
 
-AUTH_GUARD=web
+AUTH_GUARD=api
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
